--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "normalize-url": "^5.3.1",
-    "passport": "^0.7.0"
+    "passport": "^0.7.0",
+    "path": "^0.12.7"
   }
 }
