--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,17 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/api" }]
-  }
+  "version": 2,
+  "installCommand": "npm install",
+  "buildCommand": "npm run build",
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ]
+}
