--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "nodemailer": "^6.9.9",
     "normalize-url": "^5.3.1",
     "passport": "^0.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "qrcode-terminal": "^0.12.0",
+    "whatsapp-web.js": "^1.23.0"
   }
 }
