--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "passport": "^0.7.0",
     "path": "^0.12.7",
     "qrcode-terminal": "^0.12.0",
+    "stripe": "^14.18.0",
+    "uuid": "^9.0.1",
     "whatsapp-web.js": "^1.23.0"
   }
 }
