--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "^0.0.1-security",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.30.1",
     "mongoose": "^7.2.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
